--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   </style>
 </head>
 <body>
-  <h1>Movie & Series</h1>
-  <a href="https://jkhub.fun" class="btn">DOWNLOAD KARKE</a>
+  <h1>JKHub Movies</h1>
+  <a href="https://jkhub.fun" class="btn">Movie & Series Download</a>
   <div class="note">
     New domain is <a href="https://jkhub.fun">jkhub.fun</a>
   </div>
